fixed error with stream to list conversion